--- a/themes/nox/public/profile.css
+++ b/themes/nox/public/profile.css
@@ -23,13 +23,13 @@
 .profileName {
 	font-size: 21px;
 }
-.topBlock, .passiveBlock {
+.topBlock, .levelBlock, .passiveBlock {
 	background-color: #444444;
 	border-radius: 3px;
 	width: 180px;
 	padding: 16px;
 }
-.passiveBlock {
+.levelBlock, .passiveBlock {
 	margin-top: 12px;
 	padding: 12px;
 }
