--- a/templates/level_list.html
+++ b/templates/level_list.html
@@ -6,7 +6,7 @@
 	{{range .Levels}}
 	<div class="rowblock">
 		<div class="rowitem passive rowmsg level_{{.Status}}">
-			<div>{{level .Level}}</div>
+			<div class="levelBit">{{level .Level}}</div>
 			<div class="progressWrap"{{if eq .Status "inprogress"}} style="width: {{.Percentage}}%;"{{end}}>
 				<div>Score: {{.Score}}</div>
 			</div>
