--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,14 @@
 		</div>
 		<div class="levelBlock">
 			<div class="rowitem passive">
-				<a class="profile_menu_item">{{level .ProfileOwner.Level}}: [{{.CurrentScore}} / {{.NextScore}}]</a>
+				<div class="profile_menu_item level_inprogress">
+					<div class="levelBit">
+						<a>{{level .ProfileOwner.Level}}</a>
+					</div>
+					<div class="progressWrap" style="width: 40%;">
+						<div>{{.CurrentScore}} / {{.NextScore}}</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="passiveBlock">
