--- a/templates/profile_comments_row.html
+++ b/templates/profile_comments_row.html
@@ -21,7 +21,7 @@
 		<div class="rowitem passive deletable_block editable_parent comment {{.ClassName}}">
 			<div class="topRow">
 				<div class="userbit">
-					<img src="{{.Avatar}}" alt="{{.CreatedByName}}'s Avatar" title="{{.CreatedByName}}'s Avatar" />
+					<img src="{{.MicroAvatar}}" alt="{{.CreatedByName}}'s Avatar" title="{{.CreatedByName}}'s Avatar" />
 					<span class="nameAndTitle">
 						<a href="{{.UserLink}}" class="real_username username">{{.CreatedByName}}</a>
 						{{if .Tag}}<a class="username hide_on_mobile user_tag" style="float: right;">{{.Tag}}</a>{{end}}
