--- a/themes/nox/public/main.css
+++ b/themes/nox/public/main.css
@@ -854,6 +854,7 @@ input[type=checkbox]:checked + label .sel {
 	margin-bottom: 4px;
 	padding-bottom: 2px;
 	padding-top: 3px;
+	margin-right: 3px;
 }
 #poweredByHolder {
 	display: flex;
