Split the transpiled topic alt route into a guest part and a member part for extra speed. Fixed a bug in the template fragment coalescer. Added the loadTemplate function to help reduce the amount of duplicated code in the template generator. Added a couple of helper methods to CContext to reduce the amount of possibly error prone boilerplate.

--- a/templates/header.html
+++ b/templates/header.html
@@ -38,7 +38,7 @@
 				</div>
 				<div style="clear: both;"></div>
 			</nav>
-			<div class="right_of_nav"><!--{{dock "rightOfNav" .Header }}-->
+			<div class="right_of_nav">{{/**<!--{{dock "rightOfNav" .Header }}-->**/}}
 {{/** TODO: Make this a separate template and load it via the theme docks, here for now so we can rapidly prototype the Nox theme **/}}
 {{if eq .Header.Theme.Name "nox"}}
 <div class="user_box">
