Fixed a bug where forums inheriting from the group didn't appear on the forum list and the topic list. Cleaned up the logic in preRoute slightly. Reordered the logic in preRoute so that the CSP is set for the PreError too. Clear a user's cached data when their IP changes. Hide the comment header when there aren't any comments.

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -71,10 +71,10 @@
 					<input name="ban-duration-months" type="number" value="0" min="0" />
 				</div>
 			</div>
-			<!--<div class="formrow">
+			{{/**<!--<div class="formrow">
 				<div class="formitem formlabel"><a>{{lang "profile_ban_user_reason"}}</a></div>
 				<div class="formitem"><textarea name="ban-reason" placeholder="A really horrible person" required></textarea></div>
-			</div>-->
+			</div>-->**/}}
 			<div class="formrow">
 				<div class="formitem"><button name="ban-button" class="formbutton form_middle_button">{{lang "profile_ban_user_button"}}</button></div>
 			</div>
@@ -82,9 +82,9 @@
 	</form>
 	{{end}}
 
-	<div id="profile_comments_head" class="colstack_item colstack_head hash_hide">
+	{{if .ItemList}}<div id="profile_comments_head" class="colstack_item colstack_head hash_hide">
 		<div class="rowitem"><h1><a>{{lang "profile_comments_head"}}</a></h1></div>
-	</div>
+	</div>{{end}}
 	<div id="profile_comments" class="colstack_item hash_hide">{{template "profile_comments_row.html" . }}</div>
 
 {{if .CurrentUser.Loggedin}}
